# hello-clipboard

./: .gitignore  CHANGES  LICENSE  README.md  clipboard_monitor.py  detection.py  hello_clipboard.py  install.sh  pyproject.toml  requirements.txt  uninstall.sh
tests/: test_clickfix_detection.py  test_threat_detection.py
