[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hello-clipboard"
version = "0.1.0"
description = "Hello Clipboard — a macOS menu bar app that lets you see and edit your clipboard"
requires-python = ">=3.10"
dependencies = [
    "pyobjc-framework-Cocoa",
]

[project.scripts]
hello-clipboard = "hello_clipboard:main"
