[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hello-clipboard"
dynamic = ["version"]
description = "Hello Clipboard — a macOS menu bar app that lets you see and edit your clipboard"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "pyobjc-framework-Cocoa",
]

[tool.setuptools]
py-modules = ["hello_clipboard", "detection"]

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[project.scripts]
hello-clipboard = "hello_clipboard:main"
